feat(Recipes): implement recipe fetching:
- get all recipes
- make recipe slugs unique
- get recipes by slugs
