# swagger.json
@@ -9,8 +9,11 @@
     },
     "version": "1.0.0"
   },
-  "host": "localhost:4000",
-  "basePath": "/api",
+  "servers": [
+    {
+      "url": "https://vale-ah-backend-staging.herokuapp.com/api"
+    }
+  ],
   "tags": [
     {
       "name": "Naija Recipes",
@@ -52,6 +55,40 @@
         }
       }
     },
+    "/users/verify" : {
+      "get" : {
+        "description" : "Verify if the user is verified",
+        "tags": [
+          "Users"
+        ],
+        "parameters" : [ {
+          "name" : "token",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          },
+          "example" : "eyJhbGciOiJIUzI1NiJ9.Mg.hbsvkNj_kZvQYNtZxa4r2GXoNRLq1q4xC9qSq48Dwhw"
+        } ],
+        "responses" : {
+          "500" : {
+            "description" : "Database connection error"
+          },
+          "400" : {
+            "description" : "Verification token error",
+            "content" : {
+              "application/json; charset=utf-8" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "200" : {
+            "description" : "Account verification success"
+          }
+        }
+      }
+    },
     "/recipes": {
       "post": {
         "tags": [
@@ -88,6 +125,31 @@
       }
     },
     "/recipes/{slug}": {
+
+      "get" : {
+        "description" : "Get all recipes",
+        "summary": "Fetch all recipes ",
+        "tags": [
+          "Recipes"
+        ],
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "schema": {
+              "type":"string"
+            }
+          }
+        ],
+        "responses" : {
+          "500" : {
+            "description" : "Database connection error"
+          },
+          "200" : {
+            "description" : "Success"
+          }
+        }
+      },
       "put": {
         "tags": [
           "Recipes"
@@ -120,9 +182,7 @@
             "content": {}
           }
         }
-      }
-    },
-    "/recipes/{slug}": {
+      },
       "delete": {
         "tags": [
           "Recipes"
@@ -147,40 +207,6 @@
           }
         }
       }
-    },
-    "/users/verify": {
-      "get": {
-        "description": "Verify if the user is verified",
-        "parameters": [{
-          "name": "token",
-          "in": "query",
-          "schema": {
-            "type": "string"
-          },
-          "example": "eyJhbGciOiJIUzI1NiJ9.Mg.hbsvkNj_kZvQYNtZxa4r2GXoNRLq1q4xC9qSq48Dwhw"
-        }],
-        "responses": {
-          "500": {
-            "description": "Database connection error"
-          },
-          "400": {
-            "description": "Verification token error",
-            "content": {
-              "application/json; charset=utf-8": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "200": {
-            "description": "Account verification success"
-          }
-        }
-      },
-      "servers": [{
-        "url": "https://vale-ah-backend-staging.herokuapp.com"
-      }]
     }
   },
   "components": {
